# wallet

./: .gitignore  Makefile  README.md  generate_version.py  logging.conf  main.py  pyproject.toml  ruff.toml  sign.sh
.github/workflows/: ci.yaml
conf/: witness-pools-local.json  witness-pools-production.json  witness-pools-staging.json
conf/local/keri/cf/: local.json
libsodium/: libsodium.23.arm.dylib  libsodium.23.i386.dylib  libsodium.26.x86_64.dylib
tests/: logging.conf  test_citadel.py
wallet/: storing.py  version.py  walleting.py
wallet/app/: agenting.py  apping.py  assets.py  colouring.py  component.py  drawing.py  layout.py  naving.py  settings.py  splashing.py
wallet/app/contacting/: __init__.py  contact.py  contacts.py  create_contact.py  view_contact.py
wallet/app/identifying/: __init__.py  create_identifier.py  identifier.py  identifiers.py  kel_update_confirm.py  rotate_group_identifier.py  rotate_identifier.py  view_identifer.py
wallet/app/oobing/: oobi_resolver.py  oobi_resolver_service.py
wallet/app/witnessing/: add_witness.py  view_witness.py  witness.py  witnesses.py
wallet/core/: agent_events.py  agenting.py  baser.py  configing.py  coring.py  grouping.py  habs.py  koming.py  syncing.py
wallet/logs/: __init__.py  logs.py
wallet/notifying/: group_inception_request.py  group_rotation_request.py  notification.py  notifications.py
wallet/tasks/: aiding.py  migrating.py  oobiing.py  rotating.py
